# ot-harjoitustyo

./: .gitignore  README.md
dokumentaatio/: vaatimusmaarittely.md
game/: .config.txt.swp  .pylintrc  pyproject.toml  tasks.py
game/dokumentaatio/: changelog.md  tuntikirjanpito.md  vaatimusmaarittely.md
game/src/: board.py  game_loop.py  graph.py  main.py  renderer.py
game/src/sprites/: knight.py  peasant.py  prince.py  soldier.py  tile.py  unit.py
laskarit/: viikko1.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: maksukortti_test.py
laskarit/viikko3/: laajennettu-monopoli.md  monopoli.md
