[tool.poetry]
name = "game"
version = "0.1.0"
description = ""
authors = ["Kaapo Kivioja <kaapo.kivioja@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.1.2"
invoke = "^1.7.0"

[tool.poetry.dev-dependencies]
pylint = "^2.13.5"
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
